Fix broken tests resulting from updating columns in Allocation table
