# app/controllers/allocation_controller.rb
@@ -15,7 +15,7 @@ private
 
   def allocation_params
     params.require(:allocation).permit(
-      :nomis_staff_id, :offender_no, :offender_id, :allocated_at_tier,
+      :nomis_staff_id, :nomis_offender_id, :nomis_booking_id, :allocated_at_tier,
       :created_by, :prison, :override_reason, :note, :email
     )
   end
