# app/models/allocation.rb
@@ -1,6 +1,6 @@
 class Allocation < ApplicationRecord
   belongs_to :prison_offender_manager
 
-  validates :offender_no, :offender_id, :prison, :allocated_at_tier,
+  validates :nomis_offender_id, :nomis_booking_id, :prison, :allocated_at_tier,
     :created_by, presence: true
 end
